--- a/T-MVP-master/app/src/main/AndroidManifest.xml
+++ b/T-MVP-master/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name="com.App"
+        android:name="com.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,7 +22,7 @@
 
 
         <activity
-            android:name="com.ui.main.FlashActivity"
+            android:name="com.ui.other.FlashActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -42,12 +42,12 @@
             android:name="com.ui.user.UserActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.ui.main.AboutActivity"
+            android:name="com.ui.other.AboutActivity"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
-            android:name="com.ui.main.SettingsActivity"
+            android:name="com.ui.other.SettingsActivity"
             android:launchMode="singleTask" />
 
 
