--- a/T-MVP-master/app/src/main/AndroidManifest.xml
+++ b/T-MVP-master/app/src/main/AndroidManifest.xml
@@ -15,14 +15,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.ui.home.HomeActivity"
+            android:name="com.ui.view.HomeActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar" />
 
 
         <activity
-            android:name="com.ui.other.FlashActivity"
+            android:name="com.ui.view.FlashActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -33,26 +33,26 @@
         </activity>
 
         <activity
-            android:name="com.ui.article.ArticleActivity"
+            android:name="com.ui.view.ArticleActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
 
 
         <activity
-            android:name="com.ui.user.UserActivity"
+            android:name="com.ui.view.UserActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.ui.other.AboutActivity"
+            android:name="com.ui.view.AboutActivity"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
-            android:name="com.ui.other.SettingsActivity"
+            android:name="com.ui.view.SettingsActivity"
             android:launchMode="singleTask" />
 
 
         <activity
-            android:name="com.ui.login.LoginActivity"
+            android:name="com.ui.view.LoginActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
